--- a/curriculocomcss/curriculo.html
+++ b/curriculocomcss/curriculo.html
@@ -16,15 +16,13 @@
     <p> Aprender programação Front-End</p> 
     
     <h2> Experiência Profissional <hr></h2>
-    <p class="subt"> DPE/RS 2017 até 2018 </p>
-    <p> Atendimento ao público e realização de petições</p>
-    <p class="subt"> Assistente Jurídico 2019 até 2022</p>
-    <p> Realização de petições e controle de prazos</p>
+    <p class="subt"> DPE/RS - 2017 até 2018</p><p> Atendimento ao público e realização de petições</p>
+    <p class="subt"> Assistente Jurídico - 2019 até 2022</p><p> Realização de petições e controle de prazos</p>
     
     <h2> Formações <hr> </h2>
-    <p class="subt"> Graduação em Direito <p> Faculdade Anhanguera (2014-2018) </p></p>
-    <p class="subt"> Pós Graduação <p> Direito Constitucional Aplicado (2021-2022) </p></p>
-    <p class="subt"> Graduação em Análise e Desenvolvimento de Sistemas <p>Universidade Estácio de Sá (2023-2025) </p></p>
+    <p class="subt"> Graduação em Direito </p> <p> Faculdade Anhanguera (2014-2018)</p>
+    <p class="subt"> Pós Graduação </p> <p> Direito Constitucional Aplicado (2021-2022)</p>
+    <p class="subt"> Graduação em Análise e Desenvolvimento de Sistemas </p> <p> Universidade Estácio (2023-2025)</p>
 
     <h2>Idiomas <hr></h2>
     <p> Inglês - Avançado</p>
