--- a/curriculocomcss/curriculo.html
+++ b/curriculocomcss/curriculo.html
@@ -27,6 +27,6 @@
     <h2>Idiomas <hr></h2>
     <p> Inglês - Avançado</p>
     <h2> Cursos Complementares <hr> </h2>
-    <p> Participante do Projeto ElasNaTech - Turma 8 (Maio/2023 - Outubro/2023) </p>
+    <p> <a href="https://jabrasil.org.br/" target="_blank">JA-</a>Participante do Projeto ElasNaTech - Turma 8 (Maio/2023 - Outubro/2023) </p>
 </body>
 </html>
