--- a/curriculocomcss/curriculo.html
+++ b/curriculocomcss/curriculo.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="IMG_20230606_162918351.jpg" alt="">
+    <img src="IMG_20230606_162918351.jpg" alt="foto do Currículo">
     <h1> Carolina Oliveira de Oliveira</h1>
     
     
